@@ -66,7 +66,11 @@ public:
         //handle result
         if (ret > 0) for (auto input : this->inputs()) input->consume(size_t(ret));
         else if (ret == SOAPY_SDR_TIMEOUT) return this->yield();
-        else throw Pothos::Exception("SDRSink::work()", "writeStream "+std::to_string(ret));
+        else
+        {
+            for (auto input : this->inputs()) input->consume(numElems); //consume error region
+            throw Pothos::Exception("SDRSink::work()", "writeStream "+std::to_string(ret));
+        }
     }
 };
 
